# my-demo-code

./: .gitignore  README.md
Hardware/custom/fakecpu/: CMakeLists.txt  README.md  compile.sh  test_add.py  test_dot.py
Hardware/custom/fakecpu/cmake/: paddle_inference.cmake  third_party.cmake
Hardware/custom/fakecpu/kernels/: add_kernel.cc  argsort_kernel.cc  assign_value_kernel.cc  cast_kernel.cc  compare_kernel.cc  cross_entropy_with_softmax_kernel.cc  dot_kernel.cc  elementwise_kernel.cc  full_kernel.cc  kernels.h  matmul_kernel.cc  mean_kernel.cc  phi_funcs.h  reduce_kernel.cc  reshape_kernel.cc  sgd_kernel.cc  slice_kernel.cc  softmax_kernel.cc  transpose_kernel.cc  uniform_random_kernel.cc
Hardware/infer/IntelCPU/windows_demo/mkl-example-dll/: CMakeLists.txt  build.bat  main_test.cc  mkl-lab-solution.cc
Hardware/infer/IntelCPU/windows_demo/mkl-example-lib/: CMakeLists.txt
Hardware/infer/infer_demo/mnist/shell/: CMakeLists.txt  compile.sh  mnist_test.cc  run_demo.sh
Hardware/infer/mnn-demo/mobilenet_v2/shell/: CMakeLists.txt  build.sh  run.sh
IRBuild/: main.cpp  run_demo.sh
MindSpore/: get_ops.py  raw.csv  raw.txt
MindSpore/scripts/: clas_resnet50.diff  clas_resnet50.sh  nlp_gpt3_pretrain.sh
Paddle/: get_ops.py  gpu_ops_support.csv
Paddle/nvidia/: ngc-pull.sh
PaddlePaddle/: cpu_ops_support.csv
PaddlePaddle/backward/: bwd_matmul.py  test_bwd.py
PaddlePaddle/clipmodel/: clip_paddle_model.py
PaddlePaddle/dynamic2static/: mnist_train.py
PaddlePaddle/layers/: print_layer.py
PaddlePaddle/lenet5/: paddle_lenet5_eager.py  paddle_lenet5_graph.py
PaddlePaddle/lenetv2/: lenet_dynamic.py  lenet_infer.py  lenet_static.py
PaddlePaddle/mnist/: mnist_infer.py  mnist_train.py
PaddlePaddle/mnistv2/: mnist_infer.py  mnist_train.py
PaddlePaddle/ops/: cpu_ops_support.csv  dcu_ops_20211231.csv  dcu_ops_20220331.csv  dcu_ops_2023-03-20.csv  get_developer.py  get_diff.py  get_diff_ops.py  get_kernel_author.py  get_op_by_place.py  get_op_log_new.sh  get_op_log_old.py  get_op_num.py  get_ops.py  get_phi_op_place.py  gpu_ops_20211231.csv  gpu_ops_20220331.csv  gpu_ops_20220622.csv  gpu_ops_2023-03-20.csv  gpu_ops_2023-05-15.csv  mlu_ops_2023-05-17.csv  mlu_ops_2023-08-03.csv  npu_ops_20211231.csv  (+11 more)
TensorFlow/: CPU_ops_support.csv  GPU_ops_support.csv
andriod_demo/: README.md
andriod_demo/human_segment/shell/: CMakeLists.txt
ascend310_demo/model_test/shell/: CMakeLists.txt
ascend910_demo/acl_cpp_sample/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp
ascend_demo/: sync_ascend.sh
ascend_demo/PaddleLite-X86_64-demo/image_classification_demo/shell/: CMakeLists.txt  build.sh  image_classification_demo.cc  run.sh
ascend_demo/ascend_demo_native/shell/: CMakeLists.txt  build.sh  device.cc  model_build.cc  model_client.cc  run_demo.sh  subgraph_compute.cc  utility.h
ascend_demo/ascend_ernie_test/shell/: CMakeLists.txt  ernie_test.cc  run_demo.sh
ascend_demo_native/temp/: CMakeLists.txt  build.sh  relu_demo.cc  run_demo.sh  target_wrapper.cc  target_wrapper.h  utils.h
ascend_demo_resnet50/asssets/native/: CMakeLists.txt  build.sh  resnet50_build.cpp  run_demo.sh
bias_add_demo/model_build/: CMakeLists.txt  bias_add_build.cc  bias_add_demo.cc  bias_add_model.om  build.sh  run_demo.sh
bias_add_demo/model_run/: CMakeLists.txt  bias_add_run.cc  build.sh  run_demo.sh
cann_perf/: check_nan_inf.py  paddle_lenet5_eager.py  paddle_lenet5_eager_prof.py  paddle_lenet5_graph.py  paddle_resnet50_eager.py  paddle_resnet50_graph.py  torch_lenet5_mnist.py  torch_lenet5_mnist_prof.py  torch_resnet50_imagenet.py  torch_resnet50_imagenet_prof.py  train_mindspore_resnet50.sh  train_paddle_lenet5.sh  train_torch_resnet50.sh
demo_models/: mindspore_resnet50_imagenet.py  paddle_lenet5_eager.py  paddle_lenet5_graph.py  paddle_resnet50_eager.py  paddle_resnet50_graph.py  paddle_resnet50_static.py  pytorch_lenet5_mnist.py  pytorch_resnet50_cifar10.py  pytorch_resnet50_imagenet.py  pytorch_resnet50_random.py  train_mindspore.sh  train_paddle.sh  train_pytorch.sh  train_torch.sh
demo_perf/: paddle_lenet5_eager.py  paddle_lenet5_eager_prof.py  paddle_lenet5_graph.py  paddle_resnet50_eager.py  paddle_resnet50_eager_prof.py  paddle_resnet50_graph.py  torch_lenet5_mnist.py  torch_lenet5_mnist_prof.py  torch_resnet50_imagenet.py  torch_resnet50_imagenet_prof.py
docs/: conf.py  index.rst
func/custom-cpu/: CMakeLists.txt
infer/Andriod/align-face/shell/: CMakeLists.txt
infer/IntelCPU/windows_demo/demo_lib_win64_MT_MKL_DLL/: CMakeLists.txt  run_demo.bat
infer/tempfile/: CMakeLists.txt  build.sh
mnist_demo_x86/: sync.sh
mnist_save/: CMakeLists.txt  mnist_save.cc
ncnn-demo/conv_model/shell/: CMakeLists.txt  build.sh  model_test.cc  model_test_64.cc
npu_demo_mnsit/shell/: CMakeLists.txt  mnist_demo.cc  run_demo.sh
npu_lite_libs/: sync_armv7_log.sh
openi_demo/: lenet_mnist_local.py  lenet_mnist_openi.py  tipc_test.py  train_lenet.py
python/: mnist.py  simple_mnist.py
simple_mnist_demo_andriod/: README.md  sync.sh
simple_mnist_demo_x86/: sync.sh
simple_mnist_demo_x86/mnist_lite/: CMakeLists.txt  build.sh  mnist_lite.cc  run_predict.sh  run_save.sh
simple_mnist_demo_x86/mnist_save/: CMakeLists.txt  build.sh  mnist_save.cc
simple_mnist_python/: simple_mnist_dygraph.py  simple_mnist_infer.py  simple_mnist_train.py
tempfile/: build.bat  main.cc  myfile.txt  run_demo.bat  run_demo.sh
tools/: code_merge.py
x86_demo/: download.sh
x86_demo/align-150/shell/: CMakeLists.txt  build.sh  face-mark.raw  infer-out.raw  lite-crop.py  lite-out.raw  model_test.cc  post_process.py  run_demo.sh
x86_demo/align-face/shell/: CMakeLists.txt  build.bat  build.sh  build32.bat  model_test.cc  run_demo.bat  run_demo.sh
x86_demo/human_seg/shell/: CMakeLists.txt  build.bat  build.sh  lite-out.raw  model_test.cc  run_demo.bat  run_demo.sh
x86_demo/human_segment/lite/: CMakeLists.txt  build.sh  human_seg_demo.cc  run_demo.sh
x86_demo/human_segment/shell/: CMakeLists.txt  build.bat  build.sh  human_seg_demo.cc  logging.h  run_demo.bat  run_demo.sh
(+848 files in other folders)
